--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
                 </div>
                 <div class="metric-card">
                     <h4>Net Operating Income</h4>
-                    <div class="value">$411K</div>
-                    <div class="subtitle">60% Margin</div>
+                    <div class="value">$405K</div>
+                    <div class="subtitle">59% Margin (Realistic)</div>
                 </div>
                 <div class="metric-card">
                     <h4>ROI by Year 3</h4>
@@ -549,28 +549,166 @@
                 </ul>
             </div>
 
-            <h3>Revenue Projections (5-Year Outlook)</h3>
-            <div class="financial-grid">
-                <div class="metric-card">
-                    <h4>Year 1 (55% Occupancy)</h4>
-                    <div class="value">$562K</div>
-                    <div class="subtitle">Soft Opening Phase</div>
-                </div>
-                <div class="metric-card">
-                    <h4>Year 2 (65% Occupancy)</h4>
-                    <div class="value">$685K</div>
-                    <div class="subtitle">Established Operations</div>
-                </div>
-                <div class="metric-card">
-                    <h4>Year 3 (75% Occupancy)</h4>
-                    <div class="value">$788K</div>
-                    <div class="subtitle">Market Leadership</div>
-                </div>
-                <div class="metric-card">
-                    <h4>5-Year Total Revenue</h4>
-                    <div class="value">$3.6M</div>
-                    <div class="subtitle">Cumulative Projection</div>
-                </div>
+            <h3>Detailed Operating Expense Analysis (Annual) - REVISED</h3>
+            <div class="table-responsive">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Expense Category</th>
+                            <th>Annual Cost</th>
+                            <th>% of Revenue</th>
+                            <th>Calculation Basis</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Property Management & Cleaning</td>
+                            <td>$68,520</td>
+                            <td>10%</td>
+                            <td>$70/turnover × 978 bookings/year</td>
+                        </tr>
+                        <tr>
+                            <td>Platform Fees (Airbnb/VRBO)</td>
+                            <td>$34,260</td>
+                            <td>5%</td>
+                            <td>Average 5% of gross bookings</td>
+                        </tr>
+                        <tr style="background: #fff3cd;">
+                            <td><strong>All Utilities & Infrastructure</strong></td>
+                            <td><strong>$28,800</strong></td>
+                            <td><strong>4.2%</strong></td>
+                            <td><strong>See detailed breakdown below</strong></td>
+                        </tr>
+                        <tr>
+                            <td style="padding-left: 20px; font-style: italic;">• Water & Sewer/Septic</td>
+                            <td>$9,600</td>
+                            <td>1.4%</td>
+                            <td>Municipal or well/septic maintenance</td>
+                        </tr>
+                        <tr>
+                            <td style="padding-left: 20px; font-style: italic;">• Propane/Natural Gas</td>
+                            <td>$7,200</td>
+                            <td>1.1%</td>
+                            <td>Heating backup, hot water, cooking</td>
+                        </tr>
+                        <tr>
+                            <td style="padding-left: 20px; font-style: italic;">• Trash & Recycling</td>
+                            <td>$4,800</td>
+                            <td>0.7%</td>
+                            <td>Commercial pickup for 4 units</td>
+                        </tr>
+                        <tr>
+                            <td style="padding-left: 20px; font-style: italic;">• Internet & Communications</td>
+                            <td>$3,600</td>
+                            <td>0.5%</td>
+                            <td>High-speed internet essential for guests</td>
+                        </tr>
+                        <tr>
+                            <td style="padding-left: 20px; font-style: italic;">• Grid Connection & Backup</td>
+                            <td>$3,600</td>
+                            <td>0.5%</td>
+                            <td>Grid fees, backup power during outages</td>
+                        </tr>
+                        <tr>
+                            <td>Maintenance & Repairs</td>
+                            <td>$34,260</td>
+                            <td>5%</td>
+                            <td>Solar systems, saunas, green roofs, HVAC</td>
+                        </tr>
+                        <tr>
+                            <td>Insurance (Specialized STR)</td>
+                            <td>$16,000</td>
+                            <td>2.3%</td>
+                            <td>Higher due to unique property features</td>
+                        </tr>
+                        <tr>
+                            <td>Property Taxes</td>
+                            <td>$14,500</td>
+                            <td>2.1%</td>
+                            <td>Based on $800K assessed value</td>
+                        </tr>
+                        <tr>
+                            <td>Marketing & Advertising</td>
+                            <td>$20,556</td>
+                            <td>3%</td>
+                            <td>Photography, website, promotions</td>
+                        </tr>
+                        <tr>
+                            <td>Licenses & Permits</td>
+                            <td>$3,500</td>
+                            <td>0.5%</td>
+                            <td>STR licenses, health permits, certifications</td>
+                        </tr>
+                        <tr>
+                            <td>Professional Services</td>
+                            <td>$10,278</td>
+                            <td>1.5%</td>
+                            <td>Accounting, legal, consulting</td>
+                        </tr>
+                        <tr>
+                            <td>Supplies & Guest Amenities</td>
+                            <td>$20,556</td>
+                            <td>3%</td>
+                            <td>Linens, toiletries, coffee, firewood</td>
+                        </tr>
+                        <tr>
+                            <td>Landscaping & Green Roof Maintenance</td>
+                            <td>$8,000</td>
+                            <td>1.2%</td>
+                            <td>Specialized green roof care, native plants</td>
+                        </tr>
+                        <tr>
+                            <td>Equipment & Tool Replacement</td>
+                            <td>$6,852</td>
+                            <td>1%</td>
+                            <td>Yoga equipment, outdoor furniture, tools</td>
+                        </tr>
+                        <tr>
+                            <td>Contingency/Miscellaneous</td>
+                            <td>$13,710</td>
+                            <td>2%</td>
+                            <td>Unexpected operating costs</td>
+                        </tr>
+                        <tr style="background: #f8d7da; font-weight: bold;">
+                            <td><strong>TOTAL OPERATING EXPENSES</strong></td>
+                            <td><strong>$279,782</strong></td>
+                            <td><strong>40.8%</strong></td>
+                            <td><strong>More realistic estimate</strong></td>
+                        </tr>
+                        <tr style="background: #d4edda; font-weight: bold;">
+                            <td><strong>NET OPERATING INCOME</strong></td>
+                            <td><strong>$405,418</strong></td>
+                            <td><strong>59.2%</strong></td>
+                            <td><strong>Before debt service</strong></td>
+                        </tr>
+                        <tr>
+                            <td><em>Less: Annual Debt Service</em></td>
+                            <td><em>$46,920</em></td>
+                            <td><em>6.8%</em></td>
+                            <td><em>SBA + bank loan payments</em></td>
+                        </tr>
+                        <tr style="background: #e8f4ea; font-weight: bold;">
+                            <td><strong>CASH FLOW AFTER DEBT SERVICE</strong></td>
+                            <td><strong>$358,498</strong></td>
+                            <td><strong>52.3%</strong></td>
+                            <td><strong>Owner cash flow</strong></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="market-stats">
+                <h3>Infrastructure Reality Check</h3>
+                <p><strong>Key Additions I Previously Missed:</strong></p>
+                <ul>
+                    <li><strong>Water Systems:</strong> Well maintenance, septic pumping, or municipal fees</li>
+                    <li><strong>Heating Backup:</strong> Propane for winter heating when solar insufficient</li>
+                    <li><strong>Waste Management:</strong> Commercial trash pickup for 4 units + guests</li>
+                    <li><strong>Internet:</strong> High-speed essential for modern guests ($300/month)</li>
+                    <li><strong>Grid Connection:</strong> Monthly fees even with solar, backup power costs</li>
+                    <li><strong>Green Infrastructure:</strong> Specialized maintenance for green roofs, solar panels</li>
+                </ul>
+                <p><strong>Revised NOI:</strong> 59.2% is more realistic accounting for ALL infrastructure costs.</p>
             </div>
         </section>
 
